Refactor: 게시글 로드할 때의 로직 수정